# janus-mobile-sdk-rs

./: .justfile  .spi.yml  Cargo.toml  Makefile  Package.swift  README.md
apple-tracing-sub/: .clang-format  Cargo.toml  README.md  ats_oslog.c  build.rs
apple-tracing-sub/src/: apple_log.rs  level.rs  lib.rs  main.rs  subscriber.rs  sys.rs  utils.rs
apple/Resources/: PrivacyInfo.xcprivacy
apple/Sources/Bindings/: JanusGatewayBindings.swift
apple/Sources/JanusGateway/: JaConfig.swift  JaConnection.swift  JaHandle.swift  JaHandleDelegate.swift  JaHandleEvent.swift  JaSession.swift  JanusConfig.swift  JanusConnection.swift  JanusGatewayBindings.swift  JanusHandle.swift  JanusHandleDelegate.swift  JanusHandleEvent.swift  JanusLogger.swift  JanusSession.swift
apple/Sources/JanusGateway/Documentation.docc/: JanusGateway.md
apple/Sources/Plugins/: JaEchoTestHandle.swift  JaSession+Attach.swift
apple/Sources/Plugins/AudioBridge/: JanusAudioBridgeDelegate.swift  JanusAudioBridgeEvent.swift  JanusAudioBridgeHandle.swift
apple/Sources/Plugins/Documentation.docc/: JanusGatewayPlugins.md
apple/Sources/Plugins/EchoTest/: JaEchoTestEvent.swift  JaEchoTestHandle.swift  (+4 more)
apple/Sources/UniFFI/: JanusGatewayBindings.swift
rslib/: Cargo.toml
rslib/src/: config.rs  connection.rs  error.rs  handle.rs  japrotocol.rs  lib.rs  logger.rs  macros.rs  protocol.rs  session.rs
rslib/src/plugins/: audiobridge.rs  common.rs  echotest.rs  mod.rs
rslib/src/plugins/audiobridge/: handle.rs  mod.rs  params.rs  responses.rs
rslib/src/plugins/echotest/: handle.rs  mod.rs  params.rs
(+6 files in other folders)
