[package]
name = "rslib"
version = "0.9.2"
edition = "2024"
publish = false
repository = "https://github.com/Ghamza-Jd/janus-mobile-sdk"

[lib]
name = "janus_gateway"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
log = "0.4.22"
log-panics = "2.1.0"
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.10"
tokio = "1.43.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uniffi = { workspace = true, features = ["tokio"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
apple-tracing-sub = { version = "*", path = "../apple-tracing-sub" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14.1"
# Newer versions of openssl-sys have a bug that causes the build to fail
openssl-sys = { version = "=0.9.87", features = ["vendored"] }

[dependencies.jarust]
version = "1.3.0"
features = [
    "echo-test-plugin",
    "audio-bridge-plugin",
    "ffi-compatible",
    "__plugin-expiremental",
]

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
